--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "description": "Design Patterns Written in Typescript",
   "author": "Al Joseph Condino",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "style:check": "npx eslint src/**",
+    "style:fix": "npx eslint src/** --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "typescript": "^4.7.3"
   }
 }
