--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,10 @@
         "es2021": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -15,5 +18,6 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-console": "off"
     }
 }
