--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "author": "Al Joseph Condino",
   "scripts": {
     "style:check": "npx eslint src/**/**/*.ts",
-    "style:fix": "npx eslint src/**/**/*.ts --fix"
+    "style:fix": "npx eslint src/**/**/*.ts --fix",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.3"
   }
 }
